k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freterapido-service
spec:
  selector:
    app: freterapido-server
  type: ClusterIP
  ports:
    - name: freterapido-service
      port: 3030
      targetPort: 3030
      protocol: TCP
